import net.fabricmc.loom.task.RemapJarTask
import work.lclpnet.build.task.GithubDeploymentTask

plugins {
    id 'java'
    id 'fabric-loom' version "${loom_version}"
    id 'maven-publish'
    id 'gradle-build-utils' version '1.7.0'
}

Properties props = buildUtils.loadProperties('publish.properties')

group = project.maven_group
version = "${project.mod_version}+${project.minecraft_version}"

base {
    archivesName = project.archives_base_name
}

repositories {
    mavenCentral()

    maven {
        url 'https://repo.lclpnet.work/repository/internal'
    }

    maven {
        url 'https://repo.lclpnet.work/repository/snapshots'
    }

    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }

    maven {
        url = 'https://maven.nucleoid.xyz/'
    }
}

// list of extra source set names that will have minecraft classpath
def extraMcSourceSets = ['activity', 'game', 'dev']
// list of extra source set names that will be available in the main source set
def standaloneSourceSets = ['activity', 'game']
// list of extra source set names that should not be merged into the produced artifacts ("localRuntimeOnly")
def localExtraSourceSets = ['dev']
// list of extra source set names that should have their own standalone jar artifact
def artifactExtraSourceSets = ['activity']

standaloneSourceSets.each {
    sourceSets.register(it).configure {
        // make sourceSet classes available in the main sourceSet
        sourceSets.main.compileClasspath += it.output
    }
}

sourceSets {
    dev {
        compileClasspath += main.compileClasspath + main.output + activity.output + game.output
        runtimeClasspath += main.runtimeClasspath + main.output + activity.output + game.output
    }

    game {
        compileClasspath += activity.output
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    modImplementation "work.lclpnet.mods.kibu:kibu:${project.kibu_version}"
    modImplementation "work.lclpnet.mods.kibu:kibu-world-api:${project.kibu_world_api_version}"
    modImplementation "xyz.nucleoid:fantasy:${project.fantasy_version}"
    modImplementation "maven.modrinth:sqlite-jdbc:3.41.2.1+20230506"

    modCompileOnly(modLocalRuntime("work.lclpnet.mods:pal:${project.pal_version}"))

    // optional runtime mods (and their dependencies, because jar-in-jars are not loaded via dependencies)
    modLocalRuntime "work.lclpnet.mcserver-api:mcserver-api-fabric:${project.mcserver_api_version}"
    implementation "work.lclpnet:translations4j:${project.translations4j_version}"
    localRuntime "work.lclpnet:translations4j:${project.translations4j_version}:network"

    activityCompileOnly(gameCompileOnly(compileOnly('org.jetbrains:annotations:24.1.0')))
    implementation 'org.json:json:20231013'
    implementation'com.google.dagger:dagger:2.46.1'
    annotationProcessor 'com.google.dagger:dagger-compiler:2.46.1'

    // include these dependencies
    include(implementation('org.apache.commons:commons-compress:1.26.2'))
    include(implementation('org.tukaani:xz:1.9'))
    include(implementation('org.apache.tika:tika-core:2.5.0'))
    include(implementation("work.lclpnet:maze-lib:${project.maze_lib_version}"))
    include(implementation('work.lclpnet:json-config4j:1.0.0'))

    // test dependencies
    testImplementation "net.fabricmc:fabric-loader-junit:${project.loader_version}"
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
    testImplementation "org.mockito:mockito-core:5.6.0"
}

loom {
    serverOnlyMinecraftJar()

    runs {
        remove client

        server {
            source 'dev'
        }
    }
}

test {
    useJUnitPlatform()
    systemProperty('fabric.side', 'server')
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    it.options.release.set(21)
}

[processResources, processDevResources].each {
    // replace placeholders in resources
    it.inputs.property "version", project.version

    it.filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

// add main dependencies to the extra sourceSets
extraMcSourceSets.each { name ->
    configurations.named("${name}Implementation").configure {
        it.extendsFrom(configurations.implementation)
    }

    configurations.named("${name}CompileClasspath").configure {
        it.extendsFrom(configurations.modCompileClasspathMapped)
    }

    configurations.named("${name}RuntimeClasspath").configure {
        it.extendsFrom(configurations.modCompileClasspathMapped)
    }

    // add minecraft dependencies to extra sourceSet (only available after project evaluation)
    afterEvaluate {
        configurations.named("${name}CompileClasspath").get().extendsFrom(configurations.minecraftNamedCompile)
        configurations.named("${name}RuntimeClasspath").get().extendsFrom(configurations.minecraftNamedRuntime)
    }

    def set = sourceSets.named(name).get()

    sourceSets.named('test').configure {
        it.compileClasspath += set.output
        it.runtimeClasspath += set.output
    }

    if (!localExtraSourceSets.contains(name)) {
        tasks.named("process${name.capitalize()}Resources").configure {
            tasks.processResources.dependsOn(it)  // should process activity resources
        }

        // include extra sourceSet in main jar tasks
        jar {
            from set.output
        }

        sourcesJar {
            from set.allSource
        }
    }
}

def licenseJarTasks = [jar, sourcesJar]

artifactExtraSourceSets.each { name ->
    // add extra jar tasks
    def defaultJar = tasks.register("${name}Jar", Jar.class) {
        from(sourceSets.named(name).get().output)
        archiveClassifier.set("${name}-dev")

        def buildDir = layout.buildDirectory.asFile.getOrElse(new File("build"))
        destinationDirectory.set(new File(buildDir, "devlibs"))

        description "Builds the standalone ${name} api jar."
        group 'build'
    }.get()

    def remappedJar = tasks.register("remap${name.capitalize()}Jar", RemapJarTask.class) {
        dependsOn defaultJar

        description "Remaps the built ${name} jar to intermediary mappings."
        group 'fabric'
        archiveClassifier.set(name)
        addNestedDependencies = false  // cannot add nested jars to non-mod jars produced by RemapJarTask

        inputFile.convention(defaultJar.archiveFile)
    }.get()

    [defaultJar, remappedJar].each {
        tasks.assemble.dependsOn(it)
    }

    licenseJarTasks.add(defaultJar)
}

// include license file in jar tasks
licenseJarTasks.each {
    it.from('LICENSE') {
        rename { "${it}_${project.archivesBaseName}" }
    }
}

def env = System.getenv()

tasks.register("github", GithubDeploymentTask) {
    dependsOn tasks.remapJar

    config {
        token = env.get("GITHUB_TOKEN")
        repository = env.get("GITHUB_REPOSITORY")
    }

    release {
        title = "[$project.minecraft_version] $project.name $project.version"
        tag = project.version
    }

    assets.add(tasks.remapJar.archiveFile.get())
}

publishing {
    buildUtils.setupPublishRepository(repositories, props)

    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name

            from components.java

            pom {
                name = 'Mini Game Lobby'
                description = 'A mod that introduces a game lifecycle along with a waiting lobby'
            }
        }
    }
}